@@ -108,6 +108,7 @@ require 'lobbyist/v2/review_withdrawal_request'
 require 'lobbyist/v2/review'
 require 'lobbyist/v2/scotty_setting'
 require 'lobbyist/v2/smart_invite_setting'
+require 'lobbyist/v2/social_network_profile'
 require 'lobbyist/v2/summary'
 require 'lobbyist/v2/urls'
 require 'lobbyist/v2/workflow_system'
